--- a/FoodDatabase/AppShell.xaml
+++ b/FoodDatabase/AppShell.xaml
@@ -4,13 +4,20 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:FoodDatabase"
-    Shell.FlyoutBehavior="Disabled"
-    Loaded="Shell_Loaded">
-
+    Shell.FlyoutBehavior="Disabled">
     <ShellContent
-        x:Name="ShellContainer"
-        Title="Home"
+        x:Name="MainContainer"
         ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
-
+        Title="Home"
+        Route="MainPage"/>
+    <ShellContent 
+        x:Name="SearchContainer"
+        ContentTemplate="{DataTemplate local:SearchPage}"        
+        Title="Food Search"
+        Route="Search"/>
+    <ShellContent 
+        x:Name="PowerFoodsContainer"
+        ContentTemplate="{DataTemplate local:PowerFoodsPage}"        
+        Title="Power Foods"
+        Route="PowerFoods"/>
 </Shell>
