--- a/FoodDatabase/MainPage.xaml
+++ b/FoodDatabase/MainPage.xaml
@@ -1,8 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="FoodDatabase.MainPage"
-             Loaded="ContentPage_Loaded">
+             x:Class="FoodDatabase.MainPage">
 
     <ScrollView>
         <VerticalStackLayout
@@ -12,7 +11,7 @@
 
             <Image
                 Source="dotnet_bot.png"
-                SemanticProperties.Description="Cute dot net bot waving hi to you!"
+                SemanticProperties.Description="Da bot"
                 HeightRequest="200"
                 HorizontalOptions="Center" />
 
