--- a/FoodDatabase/SearchPage.xaml
+++ b/FoodDatabase/SearchPage.xaml
@@ -3,76 +3,87 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="FoodDatabase.SearchPage"
              Title="Search Food Database">
-    
+
     <VerticalStackLayout>
+
         <HorizontalStackLayout>
-            <Button IsEnabled="False" Text="Food Search"/>
-            <Button IsEnabled="True" Clicked="Button_Clicked" Text="Power Foods"></Button>
+            <Button IsEnabled="False" Text="Food Search" Margin="5,5,5,5"/>
+            <Button Command="{Binding PowerFoodsNavigation}" Margin="5,5,5,5" Text="Power Foods"></Button>
         </HorizontalStackLayout>
-        <Label 
+
+        <Label
+            Margin="5,5,5,5"
             Text="{Binding DatabaseStats}"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
-        <Grid Margin="20,20,20,20">
+
+        <Grid>
+
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+
+            <Button Margin="5,5,5,5" Command="{Binding ShowCategoryCommand}" Text="Change Category"/>
+
+            <Label Margin="5,5,5,5" 
+                   Text="{Binding Category.Description}" 
+                   VerticalOptions="CenterAndExpand"
+                   Grid.Column="1"/>
+
+            <ListView Grid.Row="1" 
+                                Margin="5,5,5,5"
+                                IsVisible="{Binding ShowCategory}"
+                            ItemsSource="{Binding FoodCategories}"
+                                SelectionMode="Single"
+                                SelectedItem="{Binding Category}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextCell Text="{Binding Description}"/>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
+        <Grid>
+            <Grid.RowDefinitions>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <Picker
-                Margin="2,2,2,2"
-                Grid.Row="0"
-                Grid.Column="0"
-                Grid.ColumnSpan="2"
-                Title="Pick a Category"
-                ItemsSource="{Binding FoodCategories}"
-                ItemDisplayBinding="{Binding Description}"
-                SelectedItem="{Binding Category}">
-            </Picker>
             <Label 
-                Margin="2,2,2,2"
-                Grid.Row="1"
-                Grid.Column="0"
-            Text="Enter Search:"
-            VerticalOptions="Center"
-            HorizontalOptions="End"/>
+                Margin="5,5,5,5"                
+                Text="Enter Search:"
+                VerticalOptions="Center"
+                HorizontalOptions="End"/>
             <Entry
-                Margin="2,2,2,2"
-                Grid.Row="1"
+                Margin="5,5,5,5"
+                Grid.Row="0"
                 Grid.Column="1"
                 x:Name="SearchEntry"
                 Placeholder="Search text"
                 MaxLength="255"
                 ClearButtonVisibility="WhileEditing"
                 Keyboard="Text"
-                Text="{Binding SearchText,Mode=TwoWay}"/>
+                Text="{Binding SearchText}"/>
         </Grid>
-        <Label Margin="2,2,2,2"
+        <Label Margin="5,5,5,5"
                IsVisible="{Binding NoFoods}"
                Text="No food items were found."/>
-        <CollectionView 
+        <ListView
             ItemsSource="{Binding FoundationFoods}"
             IsVisible="{Binding HasFoods}">
-            <CollectionView.ItemTemplate>
+            <ListView.ItemTemplate>
                 <DataTemplate>
-                    <Grid Margin="5,5,5,5   ">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                        </Grid.RowDefinitions>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="Auto"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <Label Grid.Column="0"
-                               Text="{Binding Description}"/>
-                        <Label Grid.Column="1"
-                               Text="{Binding ScientificName}"/>
-                    </Grid>
+                    <TextCell Text="{Binding Description}"/>
                 </DataTemplate>
-            </CollectionView.ItemTemplate>
-        </CollectionView>
+            </ListView.ItemTemplate>
+        </ListView>
     </VerticalStackLayout>
 </ContentPage>
