--- a/FoodDatabase/SearchPage.xaml
+++ b/FoodDatabase/SearchPage.xaml
@@ -81,7 +81,10 @@
             IsVisible="{Binding HasFoods}">
             <ListView.ItemTemplate>
                 <DataTemplate>
-                    <TextCell Text="{Binding Description}"/>
+                    <TextCell 
+                        Text="{Binding Description}"
+                        Command="{Binding Source={RelativeSource AncestorType={x:Type ContentPage}}, Path=BindingContext.FoodCommand}"
+                        CommandParameter="{Binding Id}"/>
                 </DataTemplate>
             </ListView.ItemTemplate>
         </ListView>
